# sandal

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
scripts/: build-kernel.sh  build-rootfs.sh  kernel.config  setup-image.sh
src/: cli.rs  devicetree.rs  export.sh  ext2.rs  init.rs  init.sh  initramfs.rs  main.rs  net.rs  net.sh  rootfs.rs  snapshot.rs  tar.rs  unet.rs  vm.rs
src/elf/: arm64.rs  linux.rs  macros.rs  mod.rs
src/hypervisor/: ffi.c  ffi.rs  mod.rs  vcpu.rs  vm.rs
src/virtio/: blk.rs  console.rs  fs.rs  mod.rs  net.rs  rng.rs
tests/: run_curl_hang.sh  test_curl_hang.exp
