[package]
name = "sandal"
version = "0.1.0"
edition = "2021"
authors = ["maralla"]
description = "A high-performance, lightweight sandbox for running untrusted code securely on macOS Apple Silicon"

[[bin]]
name = "sandal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
memmap2 = "0.9"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
dirs = "6.0.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary

[build-dependencies]
cc = "1.0"
